# rust-first-course

./: Cargo.toml
ch08/: Cargo.toml
course-proto/: Cargo.toml  build.rs
course-proto/proto/kv_server/: abi.proto
course-proto/src/: kv_server.rs  lib.rs
course-proto/src/pb/: abi.rs
httpie/: Cargo.toml
httpie/src/: lib.rs  main.rs
kv-server/: Cargo.toml
kv-server/examples/: client.rs  dummy-server.rs
kv-server/src/: command.rs  error.rs  lib.rs
kv-server/src/storage/: memory.rs
lab/: Cargo.toml
lab/examples/: hello-rocket.rs  std-tcp-client.rs  std-tcp-server.rs  tokio-tcp-client.rs  tokio-tcp-server.rs
queryer/: Cargo.toml
queryer-py/: Cargo.toml  readme.md
queryer-py/src/: lib.rs
queryer/examples/: covid-dialect.rs  covid.csv  covid.rs  dialect.rs
queryer/src/: convert.rs  dialect.rs  lib.rs
thumbor/: Cargo.toml  abi.proto  build.rs
thumbor/src/: main.rs
thumbor/src/engine/: mod.rs  photon.rs
thumbor/src/pb/: abi.rs  mod.rs
xunmi-py/: Cargo.toml
xunmi-py/src/: lib.rs
