[workspace]
members = ["httpie", "queryer", "ch08", "queryer-py", "xunmi-py", "lab"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.77"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
jsonxf = "1.1.1"
mime = "0.3.17"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.7.2"
base64 = "0.21.5"
bytes = "1.5.0"
image = "0.24.7"
lazy_static = "1.4.0"
lru = "0.12.1"
percent-encoding = "2.3.1"
photon-rs = "0.3.2"
prost = "0.12.3"
serde = { version = "1.0.193", features = ["derive"] }
tower = { version = "0.4.13", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.5.0", features = [
    "add-extension",
    "compression-full",
    "trace",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
polars = { version = "0.44.2", features = ["json", "lazy"] }
sqlparser = "0.52.0"
