[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
jsonxf = { workspace = true }
mime = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
