[package]
name = "kv-server"
version = "0.1.0"
edition = "2021"

[dependencies]
course-proto = { path = "../course-proto", version = "0.1.0" }
bytes = { workspace = true }
tracing = { workspace = true }
prost.workspace = true

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
