[package]
name = "kv-server"
version = "0.1.0"
edition = "2024"

[dependencies]
course-proto = { path = "../course-proto", version = "0.1.0" }
bytes = { workspace = true }
tracing = { workspace = true }
prost.workspace = true
thiserror = "2.0.3"
anyhow = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
