[package]
name = "queryer_py"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
queryer = { version = "0.1.0", path = "../queryer" }
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
pyo3-build-config = "0.23.1"
